--- a/src/GUI/SignUpPage.form
+++ b/src/GUI/SignUpPage.form
@@ -1,19 +1,26 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="GUI.SignUpPage">
-  <grid id="27dc6" binding="signUpPanel" layout-manager="GridLayoutManager" row-count="3" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" binding="signUpPanel" layout-manager="GridLayoutManager" row-count="3" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="5" vgap="0">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="20" y="20" width="827" height="585"/>
+      <xy x="20" y="20" width="1600" height="900"/>
     </constraints>
     <properties>
       <background color="-5131855"/>
+      <maximumSize width="1600" height="900"/>
+      <minimumSize width="1600" height="900"/>
+      <preferredSize width="1600" height="900"/>
     </properties>
     <border type="none"/>
     <children>
-      <grid id="91cdb" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+      <grid id="91cdb" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="0" vgap="0">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
-          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false">
+            <minimum-size width="-1" height="300"/>
+            <preferred-size width="-1" height="300"/>
+            <maximum-size width="-1" height="300"/>
+          </grid>
         </constraints>
         <properties>
           <background color="-5131855"/>
@@ -23,7 +30,11 @@
         <children>
           <component id="fcb5b" class="javax.swing.JButton" binding="photoButton" default-binding="true">
             <constraints>
-              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
+              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false">
+                <minimum-size width="225" height="225"/>
+                <preferred-size width="225" height="225"/>
+                <maximum-size width="225" height="225"/>
+              </grid>
             </constraints>
             <properties>
               <text value="Photo"/>
@@ -31,10 +42,14 @@
           </component>
         </children>
       </grid>
-      <grid id="99359" layout-manager="GridLayoutManager" row-count="6" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-        <margin top="0" left="155" bottom="0" right="200"/>
+      <grid id="99359" layout-manager="GridLayoutManager" row-count="6" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="15" vgap="-1">
+        <margin top="0" left="375" bottom="0" right="350"/>
         <constraints>
-          <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+          <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false">
+            <minimum-size width="-1" height="350"/>
+            <preferred-size width="-1" height="350"/>
+            <maximum-size width="-1" height="350"/>
+          </grid>
         </constraints>
         <properties>
           <background color="-5131855"/>
@@ -47,7 +62,7 @@
               <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <font size="22" style="1"/>
+              <font name="Verdana" size="20" style="1"/>
               <foreground color="-6094769"/>
               <text value="e-mail"/>
             </properties>
@@ -57,7 +72,7 @@
               <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <font size="22" style="1"/>
+              <font name="Verdana" size="20" style="1"/>
               <foreground color="-6094769"/>
               <text value="Password"/>
             </properties>
@@ -67,7 +82,7 @@
               <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <font size="22" style="1"/>
+              <font name="Verdana" size="20" style="1"/>
               <foreground color="-6094769"/>
               <text value="Password (again)"/>
             </properties>
@@ -75,36 +90,42 @@
           <component id="d506c" class="javax.swing.JTextField" binding="textField1" default-binding="true">
             <constraints>
               <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-                <preferred-size width="150" height="-1"/>
+                <minimum-size width="500" height="-1"/>
+                <preferred-size width="500" height="-1"/>
+                <maximum-size width="500" height="-1"/>
               </grid>
             </constraints>
             <properties>
               <background color="-16768928"/>
-              <font size="20"/>
+              <font size="20" style="1"/>
               <foreground color="-1"/>
             </properties>
           </component>
           <component id="690ac" class="javax.swing.JPasswordField" binding="passwordField1" default-binding="true">
             <constraints>
               <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-                <preferred-size width="150" height="-1"/>
+                <minimum-size width="500" height="-1"/>
+                <preferred-size width="500" height="-1"/>
+                <maximum-size width="500" height="-1"/>
               </grid>
             </constraints>
             <properties>
               <background color="-16768928"/>
-              <font size="20"/>
+              <font size="20" style="1"/>
               <foreground color="-1"/>
             </properties>
           </component>
           <component id="9e346" class="javax.swing.JPasswordField" binding="passwordField2" default-binding="true">
             <constraints>
               <grid row="4" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-                <preferred-size width="150" height="-1"/>
+                <minimum-size width="500" height="-1"/>
+                <preferred-size width="500" height="-1"/>
+                <maximum-size width="500" height="-1"/>
               </grid>
             </constraints>
             <properties>
               <background color="-16768928"/>
-              <font size="20"/>
+              <font size="20" style="1"/>
               <foreground color="-1"/>
             </properties>
           </component>
@@ -113,7 +134,7 @@
               <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <font size="22" style="1"/>
+              <font name="Verdana" size="20" style="1"/>
               <foreground color="-6094769"/>
               <text value="Surname"/>
             </properties>
@@ -123,7 +144,7 @@
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <font size="22" style="1"/>
+              <font name="Verdana" size="20" style="1"/>
               <foreground color="-6094769"/>
               <text value="Name"/>
             </properties>
@@ -131,24 +152,28 @@
           <component id="e3f2d" class="javax.swing.JTextField" binding="textField2" default-binding="true">
             <constraints>
               <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-                <preferred-size width="150" height="-1"/>
+                <minimum-size width="500" height="-1"/>
+                <preferred-size width="500" height="-1"/>
+                <maximum-size width="500" height="-1"/>
               </grid>
             </constraints>
             <properties>
               <background color="-16768928"/>
-              <font size="20"/>
+              <font size="20" style="1"/>
               <foreground color="-1"/>
             </properties>
           </component>
           <component id="af57a" class="javax.swing.JTextField" binding="textField3" default-binding="true">
             <constraints>
               <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-                <preferred-size width="150" height="-1"/>
+                <minimum-size width="500" height="-1"/>
+                <preferred-size width="500" height="-1"/>
+                <maximum-size width="500" height="-1"/>
               </grid>
             </constraints>
             <properties>
               <background color="-16768928"/>
-              <font size="20"/>
+              <font size="20" style="1"/>
               <foreground color="-1"/>
             </properties>
           </component>
@@ -161,7 +186,7 @@
               <borderPainted value="false"/>
               <contentAreaFilled value="false"/>
               <defaultCapable value="false"/>
-              <font size="18" style="1"/>
+              <font name="Verdana" size="19" style="1"/>
               <foreground color="-1"/>
               <opaque value="true"/>
               <text value="Sign Up"/>
@@ -172,19 +197,17 @@
       <grid id="25174" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
-          <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+          <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false">
+            <minimum-size width="-1" height="250"/>
+            <preferred-size width="-1" height="250"/>
+            <maximum-size width="-1" height="250"/>
+          </grid>
         </constraints>
         <properties>
           <background color="-5131855"/>
         </properties>
         <border type="none"/>
-        <children>
-          <vspacer id="cdb9c">
-            <constraints>
-              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
-            </constraints>
-          </vspacer>
-        </children>
+        <children/>
       </grid>
     </children>
   </grid>
