--- a/src/GUI/Garage.form
+++ b/src/GUI/Garage.form
@@ -11,7 +11,7 @@
       <maximumSize width="1400" height="900"/>
       <minimumSize width="1400" height="900"/>
     </properties>
-    <border type="etched"/>
+    <border type="none"/>
     <children>
       <grid id="b292d" layout-manager="GridLayoutManager" row-count="2" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="0" vgap="0">
         <margin top="0" left="0" bottom="0" right="0"/>
