--- a/src/GUI/LPanel.form
+++ b/src/GUI/LPanel.form
@@ -8,7 +8,7 @@
     <properties>
       <alignmentX value="0.0"/>
       <alignmentY value="0.0"/>
-      <background color="-5131855"/>
+      <background color="-3815995"/>
       <foreground color="-5131855"/>
       <maximumSize width="200" height="900"/>
       <minimumSize width="200" height="900"/>
@@ -28,7 +28,7 @@
         <properties>
           <alignmentX value="0.0"/>
           <alignmentY value="0.0"/>
-          <background color="-5131855"/>
+          <background color="-3815995"/>
         </properties>
         <border type="line">
           <title-color color="-16768928"/>
@@ -98,11 +98,12 @@
           </grid>
         </constraints>
         <properties>
-          <background color="-5131855"/>
+          <background color="-7763575"/>
           <foreground color="-5131855"/>
         </properties>
         <border type="line">
           <title-color color="-16768928"/>
+          <color color="-16768928"/>
         </border>
         <children>
           <component id="371d8" class="javax.swing.JButton" binding="profilePhotoButton" default-binding="true">
@@ -115,7 +116,7 @@
             </constraints>
             <properties>
               <alignmentY value="0.0"/>
-              <background color="-5131855"/>
+              <background color="-1579033"/>
               <borderPainted value="false"/>
               <contentAreaFilled value="true"/>
               <defaultCapable value="false"/>
@@ -140,16 +141,17 @@
           </grid>
         </constraints>
         <properties>
-          <background color="-5131855"/>
+          <background color="-7763575"/>
           <foreground color="-5131855"/>
         </properties>
         <border type="line">
           <title-color color="-16768928"/>
+          <color color="-16768928"/>
         </border>
         <children>
           <component id="fb349" class="javax.swing.JButton" binding="category1IconButton" default-binding="true">
             <constraints>
-              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="9" fill="0" indent="0" use-parent-layout="false">
+              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false">
                 <minimum-size width="195" height="210"/>
                 <preferred-size width="195" height="210"/>
                 <maximum-size width="195" height="210"/>
@@ -157,8 +159,9 @@
             </constraints>
             <properties>
               <alignmentY value="0.0"/>
-              <background color="-5131855"/>
+              <background color="-1579033"/>
               <borderPainted value="false"/>
+              <foreground color="-723724"/>
               <horizontalAlignment value="0"/>
               <horizontalTextPosition value="0"/>
               <text value=""/>
@@ -178,15 +181,16 @@
           </grid>
         </constraints>
         <properties>
-          <background color="-5131855"/>
+          <background color="-7763575"/>
         </properties>
         <border type="line">
           <title-color color="-16768928"/>
+          <color color="-16768928"/>
         </border>
         <children>
           <component id="29706" class="javax.swing.JButton" binding="category2IconButton" default-binding="true">
             <constraints>
-              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false">
+              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false">
                 <minimum-size width="195" height="210"/>
                 <preferred-size width="195" height="210"/>
                 <maximum-size width="195" height="210"/>
@@ -194,7 +198,7 @@
             </constraints>
             <properties>
               <alignmentY value="0.0"/>
-              <background color="-5131855"/>
+              <background color="-1579033"/>
               <borderPainted value="false"/>
               <horizontalAlignment value="0"/>
               <horizontalTextPosition value="0"/>
@@ -215,15 +219,16 @@
           </grid>
         </constraints>
         <properties>
-          <background color="-5131855"/>
+          <background color="-7763575"/>
         </properties>
         <border type="line">
           <title-color color="-16768928"/>
+          <color color="-16768928"/>
         </border>
         <children>
           <component id="877b9" class="javax.swing.JButton" binding="category3IconButton">
             <constraints>
-              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="9" fill="0" indent="0" use-parent-layout="false">
+              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false">
                 <minimum-size width="195" height="210"/>
                 <preferred-size width="195" height="210"/>
                 <maximum-size width="195" height="210"/>
@@ -231,7 +236,7 @@
             </constraints>
             <properties>
               <alignmentY value="0.0"/>
-              <background color="-5131855"/>
+              <background color="-1579033"/>
               <borderPainted value="false"/>
               <horizontalAlignment value="0"/>
               <horizontalTextPosition value="0"/>
