--- a/src/GUI/LPanel.form
+++ b/src/GUI/LPanel.form
@@ -116,14 +116,16 @@
             </constraints>
             <properties>
               <alignmentY value="0.0"/>
-              <background color="-1579033"/>
+              <background color="-1610600"/>
               <borderPainted value="false"/>
-              <contentAreaFilled value="true"/>
+              <contentAreaFilled value="false"/>
               <defaultCapable value="false"/>
+              <foreground color="-723724"/>
               <hideActionText value="false"/>
               <horizontalAlignment value="0"/>
               <horizontalTextPosition value="0"/>
               <iconTextGap value="0"/>
+              <opaque value="true"/>
               <text value=""/>
               <verticalAlignment value="0"/>
               <verticalTextPosition value="0"/>
@@ -142,7 +144,7 @@
         </constraints>
         <properties>
           <background color="-7763575"/>
-          <foreground color="-5131855"/>
+          <foreground color="-16768928"/>
         </properties>
         <border type="line">
           <title-color color="-16768928"/>
@@ -159,11 +161,13 @@
             </constraints>
             <properties>
               <alignmentY value="0.0"/>
-              <background color="-1579033"/>
+              <background color="-12475567"/>
               <borderPainted value="false"/>
+              <contentAreaFilled value="false"/>
               <foreground color="-723724"/>
               <horizontalAlignment value="0"/>
               <horizontalTextPosition value="0"/>
+              <opaque value="true"/>
               <text value=""/>
               <verticalAlignment value="0"/>
               <verticalTextPosition value="0"/>
@@ -198,10 +202,13 @@
             </constraints>
             <properties>
               <alignmentY value="0.0"/>
-              <background color="-1579033"/>
+              <background color="-171"/>
               <borderPainted value="false"/>
+              <contentAreaFilled value="false"/>
+              <foreground color="-723724"/>
               <horizontalAlignment value="0"/>
               <horizontalTextPosition value="0"/>
+              <opaque value="true"/>
               <text value=""/>
               <verticalAlignment value="0"/>
               <verticalTextPosition value="0"/>
@@ -236,11 +243,14 @@
             </constraints>
             <properties>
               <alignmentY value="0.0"/>
-              <background color="-1579033"/>
+              <background color="-12803119"/>
               <borderPainted value="false"/>
+              <contentAreaFilled value="false"/>
+              <foreground color="-723724"/>
               <horizontalAlignment value="0"/>
               <horizontalTextPosition value="0"/>
               <iconTextGap value="0"/>
+              <opaque value="true"/>
               <text value=""/>
             </properties>
           </component>
