--- a/src/GUI/permitProduct.form
+++ b/src/GUI/permitProduct.form
@@ -3,7 +3,7 @@
   <grid id="27dc6" binding="permitPanel" layout-manager="GridLayoutManager" row-count="8" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="20" y="20" width="500" height="400"/>
+      <xy x="20" y="20" width="646" height="644"/>
     </constraints>
     <properties/>
     <border type="none"/>
@@ -26,7 +26,7 @@
       </component>
       <component id="ce98c" class="javax.swing.JLabel" binding="productPrice">
         <constraints>
-          <grid row="3" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <text value=""/>
@@ -34,34 +34,21 @@
       </component>
       <component id="c5bb" class="javax.swing.JLabel" binding="productSeller">
         <constraints>
-          <grid row="4" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <text value=""/>
         </properties>
-      </component>
-      <component id="b6858" class="javax.swing.JTextArea" binding="productDescription">
-        <constraints>
-          <grid row="5" column="0" row-span="2" col-span="1" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false">
-            <preferred-size width="150" height="50"/>
-          </grid>
-        </constraints>
-        <properties/>
       </component>
       <component id="90c0b" class="javax.swing.JLabel" binding="productPhoto">
         <constraints>
-          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false">
+            <minimum-size width="250" height="250"/>
+            <preferred-size width="250" height="250"/>
+          </grid>
         </constraints>
         <properties>
           <text value=""/>
-        </properties>
-      </component>
-      <component id="7201" class="javax.swing.JButton" binding="nextProduct">
-        <constraints>
-          <grid row="5" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties>
-          <text value="nextProduct"/>
         </properties>
       </component>
       <component id="98a6f" class="javax.swing.JButton" binding="permitButton">
@@ -69,7 +56,33 @@
           <grid row="7" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="permit"/>
+          <background color="-6094769"/>
+          <borderPainted value="false"/>
+          <contentAreaFilled value="false"/>
+          <font size="20" style="1"/>
+          <foreground color="-1"/>
+          <opaque value="true"/>
+          <text value="Permit"/>
+        </properties>
+      </component>
+      <component id="b6858" class="javax.swing.JTextArea" binding="productDescription">
+        <constraints>
+          <grid row="5" column="0" row-span="2" col-span="1" vsize-policy="2" hsize-policy="2" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties/>
+      </component>
+      <component id="7201" class="javax.swing.JButton" binding="Next">
+        <constraints>
+          <grid row="2" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <background color="-16768928"/>
+          <borderPainted value="false"/>
+          <contentAreaFilled value="false"/>
+          <font size="18" style="1"/>
+          <foreground color="-1"/>
+          <opaque value="true"/>
+          <text value="Next"/>
         </properties>
       </component>
     </children>
