--- a/src/GUI/permitProduct.form
+++ b/src/GUI/permitProduct.form
@@ -1,62 +1,23 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="GUI.permitProduct">
-  <grid id="27dc6" binding="permitPanel" layout-manager="GridLayoutManager" row-count="8" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" binding="permitPanel" layout-manager="GridLayoutManager" row-count="3" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="20" y="20" width="646" height="644"/>
+      <xy x="20" y="20" width="600" height="700"/>
     </constraints>
-    <properties/>
+    <properties>
+      <background color="-723724"/>
+      <minimumSize width="600" height="700"/>
+      <preferredSize width="600" height="700"/>
+    </properties>
     <border type="none"/>
     <children>
-      <component id="41714" class="javax.swing.JLabel" binding="productName">
-        <constraints>
-          <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties>
-          <text value=""/>
-        </properties>
-      </component>
-      <component id="e61d1" class="javax.swing.JLabel" binding="productCategory">
-        <constraints>
-          <grid row="2" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties>
-          <text value=""/>
-        </properties>
-      </component>
-      <component id="ce98c" class="javax.swing.JLabel" binding="productPrice">
-        <constraints>
-          <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties>
-          <text value=""/>
-        </properties>
-      </component>
-      <component id="c5bb" class="javax.swing.JLabel" binding="productSeller">
-        <constraints>
-          <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties>
-          <text value=""/>
-        </properties>
-      </component>
-      <component id="90c0b" class="javax.swing.JLabel" binding="productPhoto">
-        <constraints>
-          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false">
-            <minimum-size width="250" height="250"/>
-            <preferred-size width="250" height="250"/>
-          </grid>
-        </constraints>
-        <properties>
-          <text value=""/>
-        </properties>
-      </component>
       <component id="98a6f" class="javax.swing.JButton" binding="permitButton">
         <constraints>
-          <grid row="7" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <background color="-6094769"/>
+          <background color="-12475567"/>
           <borderPainted value="false"/>
           <contentAreaFilled value="false"/>
           <font size="20" style="1"/>
@@ -65,15 +26,99 @@
           <text value="Permit"/>
         </properties>
       </component>
-      <component id="b6858" class="javax.swing.JTextArea" binding="productDescription">
+      <grid id="926b8" layout-manager="GridLayoutManager" row-count="5" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+        <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
-          <grid row="5" column="0" row-span="2" col-span="1" vsize-policy="2" hsize-policy="2" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="0" anchor="0" fill="3" indent="0" use-parent-layout="false">
+            <minimum-size width="325" height="-1"/>
+            <preferred-size width="325" height="-1"/>
+          </grid>
         </constraints>
-        <properties/>
-      </component>
-      <component id="7201" class="javax.swing.JButton" binding="Next">
+        <properties>
+          <background color="-3815995"/>
+        </properties>
+        <border type="none"/>
+        <children>
+          <component id="90c0b" class="javax.swing.JLabel" binding="productPhoto">
+            <constraints>
+              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false">
+                <minimum-size width="250" height="250"/>
+                <preferred-size width="250" height="250"/>
+              </grid>
+            </constraints>
+            <properties>
+              <text value=""/>
+            </properties>
+          </component>
+          <component id="c5bb" class="javax.swing.JLabel" binding="productSeller">
+            <constraints>
+              <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <text value=""/>
+            </properties>
+          </component>
+          <component id="41714" class="javax.swing.JLabel" binding="productName">
+            <constraints>
+              <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <text value=""/>
+            </properties>
+          </component>
+          <component id="ce98c" class="javax.swing.JLabel" binding="productPrice">
+            <constraints>
+              <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <text value=""/>
+            </properties>
+          </component>
+          <component id="b6858" class="javax.swing.JTextArea" binding="productDescription">
+            <constraints>
+              <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="2" hsize-policy="2" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties/>
+          </component>
+        </children>
+      </grid>
+      <component id="111ce" class="javax.swing.JButton" binding="declineButton">
         <constraints>
-          <grid row="2" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <background color="-3064770"/>
+          <borderPainted value="false"/>
+          <contentAreaFilled value="false"/>
+          <focusable value="false"/>
+          <font size="20" style="1"/>
+          <foreground color="-1"/>
+          <opaque value="true"/>
+          <text value="Decline"/>
+        </properties>
+      </component>
+      <component id="bc080" class="javax.swing.JButton" binding="goToLogin">
+        <constraints>
+          <grid row="1" column="1" row-span="2" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <background color="-12803119"/>
+          <borderPainted value="false"/>
+          <contentAreaFilled value="false"/>
+          <font size="20" style="1"/>
+          <foreground color="-1"/>
+          <label value="Login Page"/>
+          <opaque value="true"/>
+          <text value="Login Page"/>
+        </properties>
+      </component>
+      <component id="7201" class="javax.swing.JButton" binding="nextButton">
+        <constraints>
+          <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="0" fill="1" indent="0" use-parent-layout="false">
+            <minimum-size width="100" height="-1"/>
+            <preferred-size width="100" height="-1"/>
+            <maximum-size width="100" height="-1"/>
+          </grid>
         </constraints>
         <properties>
           <background color="-16768928"/>
@@ -81,6 +126,7 @@
           <contentAreaFilled value="false"/>
           <font size="18" style="1"/>
           <foreground color="-1"/>
+          <horizontalTextPosition value="0"/>
           <opaque value="true"/>
           <text value="Next"/>
         </properties>
