--- a/src/GUI/AddProductPage.form
+++ b/src/GUI/AddProductPage.form
@@ -173,14 +173,17 @@
           </component>
           <component id="a7ef1" class="javax.swing.JTextArea" binding="textArea1" default-binding="true">
             <constraints>
-              <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false">
-                <preferred-size width="150" height="50"/>
+              <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="4" hsize-policy="0" anchor="0" fill="3" indent="0" use-parent-layout="false">
+                <maximum-size width="-1" height="900"/>
               </grid>
             </constraints>
             <properties>
               <background color="-16768928"/>
               <font size="20" style="1"/>
               <foreground color="-1"/>
+              <lineWrap value="true"/>
+              <rows value="0"/>
+              <wrapStyleWord value="true"/>
             </properties>
           </component>
         </children>
