--- a/src/GUI/AddProductPage.form
+++ b/src/GUI/AddProductPage.form
@@ -33,7 +33,7 @@
         </properties>
         <border type="none"/>
         <children>
-          <component id="b1577" class="javax.swing.JButton" binding="button1">
+          <component id="b1577" class="javax.swing.JButton" binding="productPhotoButton">
             <constraints>
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false">
                 <minimum-size width="280" height="200"/>
